--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,8 @@
     <title>React App</title>
   </head>
   <body>
+        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
